fix: small CTA has align-items center

--- a/src/components/bs5/callToAction/callToAction.scss
+++ b/src/components/bs5/callToAction/callToAction.scss
@@ -19,6 +19,7 @@
     &.small {
         font-size: .875rem;
         line-height: 1rem;
+        align-items: center;
         .icon{
             &::after{
                 width: 1.25rem;
